<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/noteContainer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorPrimaryContainer"
        app:strokeWidth="0dp">

        <EditText
            android:id="@+id/noteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:padding="20dp"
            android:background="?attr/colorPrimaryContainer" />

    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jua"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/noteContainer"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        style="@style/Widget.Material3Expressive.LinearProgressIndicator.Wavy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        android:layout_marginTop="20dp"
        app:waveSpeed="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitle"
        app:trackCornerRadius="4dp"
        app:trackThickness="8dp" />

    <com.google.android.material.button.MaterialButtonGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        android:spacing="4dp">

        <Button
            style="?attr/materialIconButtonFilledStyle"
            android:id="@+id/commitButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:gravity="center"
            app:icon="@drawable/outline_add_24"
            app:iconGravity="textStart" />
        <Button
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            app:icon="@drawable/outline_arrow_left_alt_24"
            app:iconGravity="textStart" />
        <Button
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:icon="@drawable/outline_arrow_right_alt_24"
            android:gravity="center"
            app:iconGravity="textStart" />
    </com.google.android.material.button.MaterialButtonGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
